deployment/gke-dev-env/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: diary
  name: diary-service
  labels:
    app: diary-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diary-service
  template:
    metadata:
      labels:
        app: diary-service
    spec:
      containers:
        # Sidecar container for cloudsql-proxy to connect to CloudSql database - recommended approach by Google for GKE
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.33.1
          command:
            - /cloud_sql_proxy
            - -instances=fitcentive-dev:northamerica-northeast2:gke-dev-env-cloud-sql-instance:=tcp:5432
            - -credential_file=/secrets/cloudsql/credentials.json
          volumeMounts:
            - name: cloudsql-creds
              mountPath: /secrets/cloudsql
              readOnly: true
        - name: diary-service
          image: gcr.io/fitcentive-dev/diary:1.0
          imagePullPolicy: Always
          resources:
            requests:
              memory: 300Mi
              cpu: "0.3"
            limits:
              memory: 500Mi
              cpu: "0.5"
          ports:
            - name: http-port
              containerPort: 9000
          readinessProbe:
            httpGet:
              path: /api/diary/healthz
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /api/diary/health
              port: 9000
            initialDelaySeconds: 120
            periodSeconds: 15
      volumes:
        - name: cloudsql-creds
          secret:
            secretName: diary-service-cloudsql-instance-credentials
