deployment/gke-dev-env/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: user
  name: diary-service
spec:
  type: ClusterIP
  selector:
    app: diary-service
  ports:
    - protocol: TCP
      name: http
      port: 9000
